--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <script defer src="./js/age.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/dayjs"></script>
 </head>
 <body>
-    
+    <div>
+        Jag är&nbsp;<div id="age"></div>&nbsp; år
+    </div>
 </body>
 </html>
