Nya filer, uppdaterad css

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/index.css">
-    <script defer src="./js/age.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/dayjs"></script>
-</head>
-<body>
-    <div>
-        Jag är&nbsp;<div id="age"></div>&nbsp; år
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Om Mig: Ruben</title>
+		<link rel="stylesheet" href="./css/index.css" />
+		<script defer src="./js/age.js"></script>
+		<script defer src="https://cdn.jsdelivr.net/npm/dayjs"></script>
+	</head>
+	<body>
+		<h1>
+			Jag är&nbsp;
+			<div id="age" class="age"></div>
+			&nbsp;år gammal
+		</h1>
+
+		<div class="links">
+			<a href="./html/aboutme.html">Om Mig</a>
+			<a href="./html/projects.html">Mina Project</a>
+		</div>
+	</body>
 </html>
