--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 	</head>
 	<body>
 		<h1>
-			Jag är&nbsp;
-			<div id="age" class="age"></div>
-			&nbsp;år gammal
+			Jag heter Ruben och jag är <span id="age" class="age"></span> år gammal
 		</h1>
-
+		<video autoplay muted loop class="bgVid">
+			<source src="https://vp.nyt.com/video/2020/12/23/90802_1_00SCI-CONWAY-zucconi_wg_720p.mp4"/>
+		</video>
 		<h2>
 			<div class="links">
-				<a href="./html/aboutme.html">Om Mig</a>
-				<a href="./html/projects.html">Mina Project</a>
+				<a href="./html/aboutme.html" class="om-mig">Om Mig</a>,
+				<a href="./html/projects.html" class="mina-projekt">Mina Projekt</a>,
+				<a href="./html/projects.html" class="vene">Trash Schema</a>,
+				<!--Ändra länk-->
+				<a href="./html/kontakt.html" class="kontakta-mig">Kontaka mig</a>
 			</div>
 		</h2>
 	</body>
