--- a/html/projects.html
+++ b/html/projects.html
@@ -4,6 +4,23 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link rel="stylesheet" href="../css/mina-projekt.css">
 	</head>
-	<body></body>
+	<body>
+		<div class="container">
+			<div class="project">
+				<img src="../bilder/cellularautomata1.png" alt="Project 1">
+				<p>Detta är ett "Falling Sand"-spel som jag har utvecklat. Spelet simulerar fysiken hos olika material som sand och vatten. När du spelar spelet, kan du observera hur dessa material interagerar med varandra på ett realistiskt sätt</p>
+			</div>
+			<div class="project">
+				<img src="../bilder/js-spel.png" alt="Project 2">
+				<p>Project 2 Description</p>
+			</div>
+			<div class="project">
+				<img src="" alt="Project 3">
+				<p>Project 3 Description</p>
+			</div>
+			<!-- Add more projects as needed -->
+		</div>
+	</body>
 </html>
