--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 	</head>
 	<body>
 		<h1>
-			Jag heter Ruben och jag är <span id="age" class="age"></span> år gammal
+			<span class="green">Jag</span> <span class="cyan">heter</span> <span class="red">Ruben</span> <span class="orange">och</span> <span class="green">jag</span> <span class="cyan">är</span> <span id="age" class="age, red"></span> <span class="orange">år</span> <span class="green">gammal</span>
 		</h1>
 		<video autoplay muted loop class="bgVid">
 			<source src="https://vp.nyt.com/video/2020/12/23/90802_1_00SCI-CONWAY-zucconi_wg_720p.mp4"/>
 		</video>
 		<h2>
 			<div class="links">
-				<a href="./html/aboutme.html" class="om-mig">Om Mig</a>,
-				<a href="./html/projects.html" class="mina-projekt">Mina Projekt</a>,
-				<a href="./html/projects.html" class="vene">Trash Schema</a>,
+				<a href="./html/om-mig.html" class="green">Om Mig</a>,
+				<a href="./html/projects.html" class="cyan">Mina Projekt</a>,
+				<a href="./html/projects.html" class="red">Trash Schema</a>,
 				<!--Ändra länk-->
-				<a href="./html/kontakt.html" class="kontakta-mig">Kontaka mig</a>
+				<a href="./html/kontakt.html" class="orange">Kontaka mig</a>
 			</div>
 		</h2>
 	</body>
