--- a/html/om-mig.html
+++ b/html/om-mig.html
@@ -8,9 +8,16 @@
 	</head>
 	<body>
 		<div class="container">
-			<img class="myImg" src="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png" alt="Bild på Ruben" />
-
-			<div class="bio">Hej</div>
+			<div class="text">
+				<h1>Ruben Steen</h1>
+				<p>Hej, jag heter Ruben Steen och här är lite information om mig.</p>
+				<p>
+					Mina favoritspel
+				</p>
+			</div>
+			<div class="image">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png" alt="Bild på Ruben" width=100% height=100%>
+			</div>
 		</div>
 	</body>
 </html>
