Riktigt trött efter hackathon men säkert inte dum i huvudet :)

--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -4,8 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link rel="stylesheet" href="../css/kontakt.css">
 	</head>
 	<body>
-		<form action="input"></form>
+		<a href="../index.html"><h2>👈Hem</h2> </a>
+		<form action="../index.html" method="post" class="contact-form">
+			<input type="email" name="email" placeholder="Your Email" required>
+			<textarea name="message" placeholder="Your Message" required></textarea>
+			<button type="submit">Send</button>
+		</form>
 	</body>
 </html>
