--- a/html/om-mig.html
+++ b/html/om-mig.html
@@ -7,16 +7,28 @@
 		<link rel="stylesheet" href="../css/om-mig.css" />
 	</head>
 	<body>
+		<div class="hemknapp"><a href="../index.html"><h2>👈Hem</h2></a></div>
 		<div class="container">
 			<div class="text">
 				<h1>Ruben Steen</h1>
 				<p>Hej, jag heter Ruben Steen och här är lite information om mig.</p>
-				<p>
-					Mina favoritspel
-				</p>
+				<div class="stycke-1">
+					<p>Jag är 17år gammal och bor i Täby. På fritiden gillar jag att programmera diverse program. Allt från små spel till </p>
+					<p>Mina favoritspel är</p>
+					<ul>
+						<li><a href="https://u.gg/lol/profile/eun1/topbtw-eune/overview" target="_blank">League of legends</a></li>
+						<li>Terraria</li>
+						<li>Minecraft</li>
+						<li>Rainbow Six Siege</li>
+					</ul>
+					<p>Utöver att spela datorspel sträcker sig mitt intresse sig åt många håll och kanter då jag gillar att programmera, mer om det kan du se <a href="../html/projects.html">här</a> eller från om du klickar på "hem" och sedan mina projekt</p>
+					<p>När jag inte håller hus i den digitala världen tränar jag judo, jag har tränat judo i snart 13 år och har just nu burn bälte, och planerar att ta svart bälte till julen 2024</p>
+
+					<p>Värt att notera att jag inte lagt supermycket energi på just denna sida (inte så mycket "pzaazz")</p>
+				</div>
 			</div>
 			<div class="image">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png" alt="Bild på Ruben" width=100% height=100%>
+				<img src="../bilder/lillaruben.jpg" alt="Bild på Ruben" width=100% height=100%>
 			</div>
 		</div>
 	</body>
