jag glum lite saker och lade till kommentarer inför morgondage på vad jag ska göra

--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -9,8 +9,8 @@
 	<body>
 		<a href="../index.html"><h2>👈Hem</h2> </a>
 		<form action="../index.html" method="post" class="contact-form">
-			<input type="email" name="email" placeholder="Your Email" required>
-			<textarea name="message" placeholder="Your Message" required></textarea>
+			<input type="email" name="email" placeholder="Mejladress" required>
+			<textarea name="message" placeholder="Meddelande" required></textarea>
 			<button type="submit">Send</button>
 		</form>
 	</body>
