--- a/html/projects.html
+++ b/html/projects.html
@@ -31,5 +31,5 @@
 		<div id="info3" class="project-info">This is a description of Project 3.</div>
 	</body>
 </html>
-
+<!--INFÖR ONSDAGEN CENTRERA DESSA ^^^^^^^^^projectinfo och dessutom fixa instruktionsknappen så att den är centrerad på sidan-->
 <!--OBS: ÄNDRA SÅ ATT DET INTE FINNS TEXT UNDER NÅGOT-->
