--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="links">
 				<a href="./html/om-mig.html" class="green">Om Mig</a>,
 				<a href="./html/projects.html" class="cyan">Mina Projekt</a>,
-				<a href="./html/projects.html" class="red">Trash Schema</a>,
+				<a href="https://github.com/RWS56" target="_blank" class="red">Min Github</a>,
 				<!--Ändra länk-->
 				<a href="./html/kontakt.html" class="orange">Kontaka mig</a>
 			</div>
