--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<h1>
-			<span class="green">Jag</span> <span class="cyan">heter</span> <span class="red">Ruben</span> <span class="orange">och</span> <span class="green">jag</span> <span class="cyan">är</span> <span id="age" class="age, red"></span> <span class="orange">år</span> <span class="green">gammal</span>
+			<span class="green">Jag</span> <span class="cyan">heter</span> <span class="red">Ruben</span> <span class="orange">och</span> <span class="green">jag</span> <span class="cyan">är</span> <span id="age" class="age red"></span> <span class="orange">år</span> <span class="green">gammal</span>
 		</h1>
 		<video autoplay muted loop class="bgVid">
 			<source src="https://vp.nyt.com/video/2020/12/23/90802_1_00SCI-CONWAY-zucconi_wg_720p.mp4"/>
@@ -20,7 +20,6 @@
 				<a href="./html/om-mig.html" class="green">Om Mig</a>,
 				<a href="./html/projects.html" class="cyan">Mina Projekt</a>,
 				<a href="https://github.com/RWS56" target="_blank" class="red">Min Github</a>,
-				<!--Ändra länk-->
 				<a href="./html/kontakt.html" class="orange">Kontaka mig</a>
 			</div>
 		</h2>
